# CPPWheatherInformationApp

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_DOCUMENTATION.md  README.md  Submission.md  WeatherApp.desktop  resources.qrc
.github/workflows/: windows-build.yml
src/: MainWindow.cpp  MainWindow.h
